--- a/src/template/estCurso.ejs
+++ b/src/template/estCurso.ejs
@@ -20,26 +20,26 @@
 
     <!-- User List -->
     <div class="grid gap-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full" id="userList">
-        <% usuarios.forEach(usuario => { %>
-            <div class="user-card bg-white shadow-md rounded-lg p-4 flex flex-row items-center justify-between gap-3 w-full">
-                <div class="text-gray-700 font-semibold text-lg sm:text-base usuario-nombre">
-                    <%= usuario.nombre %>
-                </div>
-                <div class="flex flex-row gap-2">
-                    <button class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 openRecomendacionModal"
-                        data-nombre="<%= usuario.nombre %>" data-id="<%= usuario.id %>">
-                        <i class="fa-regular fa-folder"></i>
-                    </button>
-                    <a href="/editarEstudiante/<%= usuario.id %>" class="bg-green-500 text-white p-2 rounded-md hover:bg-green-600">
-                        <i class="fas fa-edit"></i>
-                    </a>
-                    <button class="bg-red-500 text-white p-2 rounded-md hover:bg-red-600 deleteButton"
-                        data-id="<%= usuario.id %>">
-                        <i class="fas fa-trash"></i>
-                    </button>
-                </div>
+    <% usuarios.forEach(usuario => { %>
+        <div class="user-card bg-white shadow-md rounded-lg p-4 flex flex-row items-center justify-between gap-3 w-full">
+            <div class="text-gray-700 font-semibold text-lg sm:text-base usuario-nombre">
+                <%= usuario.nombreestudiante %>
             </div>
-        <% }) %>
+            <div class="flex flex-row gap-2">
+                <button class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 openRecomendacionModal"
+                    data-nombre="<%= usuario.nombreestudiante %>" data-id="<%= usuario.idestudiante %>">
+                    <i class="fa-regular fa-folder"></i>
+                </button>
+                <a href="/editarEstudiante/<%= usuario.idestudiante %>" class="bg-green-500 text-white p-2 rounded-md hover:bg-green-600">
+                    <i class="fas fa-edit"></i>
+                </a>
+                <button class="bg-red-500 text-white p-2 rounded-md hover:bg-red-600 deleteButton"
+                    data-id="<%= usuario.idestudiante %>">
+                    <i class="fas fa-trash"></i>
+                </button>
+            </div>
+        </div>
+    <% }) %>
     </div>
 
 
