--- a/src/template/estCurso.ejs
+++ b/src/template/estCurso.ejs
@@ -30,7 +30,7 @@
                     data-nombre="<%= usuario.nombreestudiante %>" data-id="<%= usuario.idestudiante %>">
                     <i class="fa-regular fa-folder"></i>
                 </button>
-                <a href="/editarEstudiante/<%= usuario.idestudiante %>" class="bg-green-500 text-white p-2 rounded-md hover:bg-green-600">
+                <a href="/admin/editarEstudiante/<%= usuario.idestudiante %>" class="bg-green-500 text-white p-2 rounded-md hover:bg-green-600">
                     <i class="fas fa-edit"></i>
                 </a>
                 <button class="bg-red-500 text-white p-2 rounded-md hover:bg-red-600 deleteButton"
@@ -42,6 +42,27 @@
     <% }) %>
     </div>
 </div>
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const searchInput = document.getElementById('searchInput');
+        const userCards = document.querySelectorAll('.user-card');
+
+        searchInput.addEventListener('input', function () {
+            const searchTerm = this.value.toLowerCase();
+
+            userCards.forEach(card => {
+                const nombre = card.querySelector('.usuario-nombre').textContent.toLowerCase();
+                if (nombre.includes(searchTerm)) {
+                    card.style.display = '';
+                } else {
+                    card.style.display = 'none';
+                }
+            });
+        });
+    });
+</script>
 
 
     <!-- Modal Registro -->
